--- a/20240819172711-general_differential_equations.org
+++ b/20240819172711-general_differential_equations.org
@@ -1,13 +1,11 @@
 :PROPERTIES:
 :ID:       7434ea42-2761-4665-979d-e8314e74fc3a
 :END:
-#+title: General Differential Equations
+#+title: Differential Equation
 #+filetags: calculus differential_equations
 
 * Definition
-#+begin_quote
 A *differential equation* is an equation that contains an unknown [[id:87d42439-b03b-48be-84ab-2215b4733dd7][function]] and one or more of its [[id:a350707f-ba1b-4912-ad8d-60e80e1c5d47][derivatives]].
-#+end_quote
 
 * Notes
 The *order* of a differential equation is the order of the highest derivative that occurs in the equation.
