--- a/20240822200136-linear_differential_equations.org
+++ b/20240822200136-linear_differential_equations.org
@@ -1,16 +1,14 @@
 :PROPERTIES:
 :ID:       4e8fbac2-f3c6-4df7-acbd-34ede5c35bee
 :END:
-#+title: Linear Differential Equations
+#+title: Linear First-Order Differential Equation
 #+filetags: calculus differential_equations
 
 * Definition
-#+begin_quote
-A first-order *linear* [[id:7434ea42-2761-4665-979d-e8314e74fc3a][differential equation]] is one that can be put into the form
+A first-order linear differential equation is a [[id:5c15b683-ce0e-4c80-a914-02fe9108c072][linear differential equation]] that can be put into the form
 \begin{equation*}
 \frac{dy}{dx} + P(x)y = Q(x)
 \end{equation*}
-#+end_quote
 
 * Solution
 \begin{equation*}
